# pfopn-convert

./: Cargo.toml  LICENSE  README.md
pfopn-convert/: Cargo.toml
pfopn-convert/mappings/: interfaces.toml  plugins.toml  sections.toml
pfopn-convert/profiles/pfsense/: 99.toml  default.toml
pfopn-convert/src/: analyze.rs  backend_detect.rs  cli.rs  conversion_summary.rs  convert.rs  detect.rs  inspect.rs  interface_guard.rs  ipsec_dependencies.rs  known_mappings.rs  lib.rs  main.rs  migrate_check.rs  migrate_check_cmd.rs  openvpn_dependencies.rs  path_guard.rs  plugin_detect.rs  plugin_matrix.rs  profile.rs  report.rs  scan.rs  scan_cmd.rs  scan_plugins.rs  section.rs  target_prune.rs  verify.rs  verify_bridges.rs  verify_cmd.rs  verify_interfaces.rs  verify_nat.rs  verify_profile.rs  verify_rule_dupes.rs  verify_rule_refs.rs  verify_wireguard.rs  wireguard_dependencies.rs
pfopn-convert/src/merge/: mod.rs  openvpn_transfer.rs  pathing.rs
pfopn-convert/src/sections_report/: extras.rs  mod.rs  paths.rs  stats.rs  wireguard.rs
pfopn-convert/src/transform/: aliases.rs  bridges.rs  certs.rs  device_refs.rs  ifgroups.rs  interface_presence.rs  interface_settings.rs  ipsec.rs  lan_ip.rs  logical_refs.rs  mod.rs  opnsense_assignments.rs  pfblocker.rs  ppps.rs  (+7 more)
pfopn-convert/tests/: cli_diff.rs  cli_inspect.rs  cli_migrate_check.rs  cli_roundtrip.rs  cli_scan.rs  cli_sections.rs  cli_verify.rs
xml-diff-core/: Cargo.toml  README.md
xml-diff-core/src/: lib.rs  parser.rs  tree.rs  writer.rs
xml-diff-core/tests/: diff_basic.rs  diff_complex.rs  parser.rs  round_trip.rs
(+49 files in other folders)
