[package]
name = "pfopn-convert"
version = "0.1.0"
edition = "2021"
description = "Compare and convert pfSense and OPNsense firewall XML configurations"
license = "BSD-2-Clause"

[dependencies]
xml-diff-core = { path = "../xml-diff-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
colored = "2"
inventory = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
pretty_assertions = "1"
